--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Tangerine&display=swap');
+
 .main{
     background-color: rgb(5,5,3);
     width: 100vw;
     height: 100vh;
-    // overflow: hidden;
+    overflow: hidden;
 }
 .overlayPr{
     position: absolute;
@@ -14,7 +17,8 @@
 *{
     width: 100vw;
     height: 100vh;
-    // overflow: hidden;
+    overflow: hidden;
+    font-family: 'Tangerine';
 }
 .backgroundStars{
     width: 100vw;
