--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -31,15 +31,19 @@
     height: 100vh;
     overflow: hidden;
 }
-*{
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-}
+// *{
+//     width: 100vw;
+//     height: 100vh;
+//     overflow: hidden;
+// }
 .heading{
     color: white;
-    font-size: 3rem;
-    width: 400px;
+    font-size: 3.5rem;
+    @media (min-width: 1920px){
+        width: 450px;
+        font-size: 5rem;
+    }
+    width: 350px;
     word-wrap: break-word;
     text-align: center;
     &--wrap{
@@ -53,17 +57,32 @@
     }
 }
 .button{
-    width: 10vw;
-    height: 5vh;
+    
     border-radius: 20%;
     background: none;
     color: white;
     border:none;
-    font-size: 1rem;
+    width: 10vw;
+    height: 5vh;
     z-index: 8;
+    @media (min-width: 725px) and (max-width: 1359px){
+        
+        font-size: 1.5rem;
+    }
+    @media (min-width: 320px) and (max-width: 724px){
+        
+        font-size: 1rem;
+    
+    }
+    @media (min-width: 1360px) and (max-width: 1919px) {
+        font-size: 2rem; 
+    }
+    @media (min-width: 1920px){
+        font-size: 3rem;
+    }
     &:hover{
         border: 1px solid white;
-        z-index: 8;
+       
     }
     &--link{
         z-index: 8;
@@ -81,6 +100,10 @@
             justify-content: center;
             align-items: baseline;
             z-index: 8;
+            @media (max-width: 724px){
+                width: 100%;
+                
+            }
 
         }
         display: flex;
@@ -88,5 +111,9 @@
         justify-content: space-around;
         align-items: baseline;
         z-index: 8;
+        @media (max-width: 724px){
+            width: 100%;
+            
+        }
     }
 }
