--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -12,8 +12,8 @@
     z-index:2;
 }
 *{
-    width: 100vw;
-    height: 100vh;
+    // width: 100vw;
+    // height: 100vh;
     // overflow: hidden;
 }
 .backgroundlight{
@@ -171,11 +171,26 @@
     height: 300px;
     z-index: 8;
     border-radius: 25px;
-    border: solid white 5px;
+    border: solid white 10px;
     box-sizing: border-box;
+    @media (min-width: 750px) and (max-width: 1023px){
+        width: 300px;
+        height: 250px;
+    }
+    @media (min-width: 1024px) and (max-width: 1200px){
+        width: 400px;
+        height: 320px;
+
+    }
+    @media (min-width: 1980px) {
+        width: 800px;
+        height: 550px;
+
+    }
 }
 .appvideo iframe{
     position: absolute;
+    z-index:7;
     padding: 0;
     background-color: white;
     top: 0;
@@ -184,7 +199,7 @@
     height: 100%;
 }
 .buttonPro{
-    margin-top: 1rem;
+  
     width: 100px;
     height: 50px;
     border-radius: 20%;
@@ -193,6 +208,22 @@
     border:none;
     font-size: 1rem;
     align-self: flex-end;
+    @media (min-width: 725px) and (max-width: 1359px){
+        
+        font-size: 2rem;
+    }
+    @media (min-width: 320px) and (max-width: 724px){
+        
+        font-size: 1rem;
+    
+    }
+    @media (min-width: 1360px) and (max-width: 1919px) {
+        font-size: 2rem; 
+    }
+    @media (min-width: 1920px){
+        width: 150px;
+        font-size: 3rem;
+    }
     &:hover{
         border: 1px solid rgb(110, 72, 0);
     }
@@ -209,22 +240,59 @@
     height: 400px;
     margin-left: 3rem;
     z-index: 8;
+    @media (min-width: 750px) and (max-width: 1023px){
+        width: 300px;
+        height: 250px;
+    }
+    @media (min-width: 1024px) and (max-width: 1200px){
+        width: 400px;
+        
+
+    }
+    @media (min-width: 1980px) {
+        width: 800px;
+        height: 600px;
+
+    }
     &--description{
         position:absolute;
         top: 25vh;
         left: 50vw;
         width: 500px;
         height: 300px;
+        @media (min-width: 750px) and (max-width: 1023px){
+            width: 300px;
+            height: 209px;
+        }
+        @media (min-width: 1024px) and (max-width: 1200px){
+            width: 400px;
+            height: 320px;
+    
+        }
+        @media (min-width: 1980px) {
+            width: 800px;
+            height: 550px;
+            
+    
+        }
         z-index: 8;
         background-color: rgba(182, 153, 99, 0.5);
         border-radius: 25px;
-        border: solid white 5px;
+        border: solid white 10px;
         box-sizing: border-box;
         padding: 1rem;
         &__text{
+            font-size: 1.4rem;
             width: 100%;
             color: rgb(110, 72, 0);
             overflow-wrap: break-word;
+            @media (min-width: 750px) and (max-width: 1023px){
+                font-size: 0.8rem;
+            }
+            @media (min-width: 1980px) {
+                font-size: 2.2rem;
+        
+            }
         }
     }
 }
@@ -245,9 +313,24 @@ p{
     background: none;
     color: white;
     border:none;
-    font-size: 1rem;
+    
     &:hover{
         border: 1px solid white;
+    }
+    @media (min-width: 725px) and (max-width: 1359px){
+        
+        font-size: 2rem;
+    }
+    @media (min-width: 320px) and (max-width: 724px){
+        
+        font-size: 1rem;
+    
+    }
+    @media (min-width: 1360px) and (max-width: 1919px) {
+        font-size: 2rem; 
+    }
+    @media (min-width: 1920px){
+        font-size: 3rem;
     }
     &--link{
         margin-top: 15px;
