--- a/src/components/Stars/Stars.scss
+++ b/src/components/Stars/Stars.scss
@@ -1,6 +1,6 @@
-*{
-    box-sizing: border-box;
-}
+// *{
+//     box-sizing: border-box;
+// }
 .bodystar{
     overflow: hidden;
     display: flex;
