ready for deployment

--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -150,6 +150,9 @@ body{
     &:hover{
         border: 1px solid white;
     }
+    &:focus{
+        outline:none;
+    }
     &--link{
         margin-top: 15px;
         width: 100px;
