--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -84,6 +84,9 @@
         border: 1px solid white;
        
     }
+    &:focus{
+        outline:none;
+    }
     &--link{
         z-index: 8;
         width: 10vw;
