--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -11,11 +11,7 @@
     
     z-index:2;
 }
-*{
-    // width: 100vw;
-    // height: 100vh;
-    // overflow: hidden;
-}
+
 .backgroundlight{
     width: 100vw;
     height: 100vh;
@@ -316,6 +312,9 @@ p{
     
     &:hover{
         border: 1px solid white;
+    }
+    &:focus{
+        outline:none;
     }
     @media (min-width: 725px) and (max-width: 1359px){
         
