screen bugs fixed

--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -2,7 +2,7 @@
     background-color: rgb(5,5,3);
     width: 100vw;
     height: 100vh;
-    // overflow: hidden;
+    overflow: hidden;
 }
 .overlayPr{
     position: absolute;
