--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Pacifico&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Tangerine&display=swap');
 body{
-    overflow:hidden;
+    // overflow:hidden;
 }
+
 .main{
     background-color: rgb(5,5,3);
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
+
 }
 .overlayPr{
     position: absolute;
@@ -28,28 +29,27 @@ body{
 }
 .icons{
     &--wrap{
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
         position: absolute !important;
-        top: 5vh;
+        top: 3rem;
         z-index: 3;
     }
     
-    width: 500px;
-    height: 100px;
+    width: 400px;
+    height: 90px;
     display : flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    @media (min-width: 1440px){
-        width: 650px;
-        height: 125px;
-        margin-bottom: 2rem;
+    // @media (min-width: 1440px){
+    //     width: 650px;
+    //     height: 125px;
+    //     margin-bottom: 2rem;
     
-    }
+    // }
     &__item{
         display: flex;
         box-sizing: border-box;
@@ -61,11 +61,11 @@ body{
         border-radius: 25px;
         // flex: 1 0 21%;
         object-fit: cover;
-        @media (min-width: 1440px){
-            width: 125px;
-            height: 125px;
+        // @media (min-width: 1440px){
+        //     width: 125px;
+        //     height: 125px;
             
-        }
+        // }
     }
 }
 .headingPr{
