--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -46,7 +46,7 @@ body{
         width: 450px;
         font-size: 5rem;
     }
-    width: 350px;
+    width: 450px;
     word-wrap: break-word;
     text-align: center;
     &--wrap{
@@ -65,8 +65,8 @@ body{
     background: none;
     color: white;
     border:none;
-    width: 10vw;
-    height: 6vh;
+    width: 150px;
+    height: 50px;
     z-index: 8;
     @media (min-width: 725px) and (max-width: 1359px){
         
@@ -99,7 +99,7 @@ body{
     &--wrap{
         &--flex{
             position: absolute;
-            top: 60vh;
+            top: 70vh;
             width: 100vw;
             // height: 5vh;
             display: flex;
