--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -194,40 +194,7 @@
     width: 100%;
     height: 100%;
 }
-.buttonPro{
-  
-    width: 100px;
-    height: 50px;
-    border-radius: 20%;
-    background: none;
-    color: rgb(110, 72, 0);
-    border:none;
-    font-size: 1rem;
-    align-self: flex-end;
-    font-weight: bold;
-    @media (min-width: 725px) and (max-width: 1359px){
-        
-        font-size: 2rem;
-    }
-    @media (min-width: 320px) and (max-width: 724px){
-        
-        font-size: 1rem;
-    
-    }
-    @media (min-width: 1360px) and (max-width: 1919px) {
-        font-size: 2rem; 
-    }
-    @media (min-width: 1920px){
-        width: 150px;
-        font-size: 3rem;
-    }
-    &:hover{
-        border: 1px solid rgb(110, 72, 0);
-    }
-    &:focus{
-        outline:none;
-    }
-}
+
 .beagiver{
     position:absolute;
     display: flex;
@@ -256,19 +223,19 @@
         top: 25vh;
         left: 50vw;
         width: 500px;
-        height: 300px;
+        height: 400px;
         @media (min-width: 750px) and (max-width: 1023px){
             width: 300px;
-            height: 209px;
+            height: 310px;
         }
         @media (min-width: 1024px) and (max-width: 1200px){
-            width: 400px;
-            height: 320px;
+            width: 480px;
+            height: 400px;
     
         }
         @media (min-width: 1980px) {
             width: 800px;
-            height: 550px;
+            height: 650px;
             
     
         }
@@ -279,11 +246,10 @@
         box-sizing: border-box;
         padding: 1rem;
         &__text{
-            font-size: 1.4rem;
+            font-size: 1.3rem;
             width: 100%;
             color: rgb(110, 72, 0);
             overflow-wrap: break-word;
-            font-weight: bold;
             @media (min-width: 750px) and (max-width: 1023px){
                 font-size: 0.8rem;
             }
@@ -306,7 +272,7 @@ p{
     
 }
 .buttonProBack{
-    width: 100px;
+    width: 150px;
     height: 50px;
     border-radius: 20%;
     background: none;
@@ -341,3 +307,17 @@ p{
         height: 50px;
         border-radius: 20%;
     }}
+.modal{
+    width: 100%;
+    height: 80%;
+        position: absolute !important;
+        top: 3rem;
+        z-index: 7;
+        border: white 1px solid;
+        background-color: rgba(255,255,255,0.3);
+        border-radius: 25px;
+        @media (min-width: 1024px) and (max-width: 1200px){
+            height:90%
+    
+        }
+}
