--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -105,10 +105,10 @@ body{
             position: absolute;
             top: 70vh;
             width: 100vw;
-            // height: 5vh;
+            height: 50px;
             display: flex;
             justify-content: center;
-            align-items: baseline;
+            // align-items: baseline;
             z-index: 8;
             @media (max-width: 724px){
                 width: 100%;
@@ -123,6 +123,7 @@ body{
         }
         display: flex;
         width: 60vw;
+        height: 50px;
         justify-content: space-around;
         align-items: baseline;
         z-index: 8;
@@ -131,7 +132,7 @@ body{
             
         }
         @media (min-width: 320px) and (max-width: 600px){
-            width: 70%;
+            width: 100%;
             height: 60px;
             justify-content: space-between;
         }
