--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -169,6 +169,10 @@
     border-radius: 25px;
     border: solid white 10px;
     box-sizing: border-box;
+    @media(max-width:750px){
+        width:100%;
+        height:100%;
+    }
     @media (min-width: 750px) and (max-width: 1023px){
         width: 300px;
         height: 250px;
@@ -199,11 +203,16 @@
     position:absolute;
     display: flex;
     flex-direction: column;
+    
     top: 15vh;
     width: 500px;
     height: 400px;
     margin-left: 3rem;
     z-index: 8;
+    @media(max-width:750px){
+        width:40%;
+        height:40%;
+    }
     @media (min-width: 750px) and (max-width: 1023px){
         width: 300px;
         height: 250px;
@@ -224,9 +233,20 @@
         left: 50vw;
         width: 500px;
         height: 400px;
+        @media (max-width: 450px){
+            top: 50vh;
+            left: 0;
+            margin-left: 3rem;
+            height: 50%;
+            width: 85%;
+        }
+        @media(min-width: 451px) and (max-width:750px){
+            width:40%;
+            height:80%;
+        }
         @media (min-width: 750px) and (max-width: 1023px){
             width: 300px;
-            height: 310px;
+            height: 340px;
         }
         @media (min-width: 1024px) and (max-width: 1200px){
             width: 480px;
@@ -250,6 +270,12 @@
             width: 100%;
             color: rgb(110, 72, 0);
             overflow-wrap: break-word;
+            @media (max-width: 600px){
+                font-size:12px;
+            }
+            @media(min-width: 601px) and (max-width:750px){
+                font-size: 14px;
+            }
             @media (min-width: 750px) and (max-width: 1023px){
                 font-size: 0.8rem;
             }
@@ -320,4 +346,10 @@ p{
             height:90%
     
         }
+        @media (max-width: 450px){
+            display:flex;
+            flex-direction: column;
+            height: 95%;
+        }
+       
 }
