--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -32,6 +32,7 @@
 }
 .icons{
     &--wrap{
+
         width: 70%;
         display: flex;
         flex-direction: column;
@@ -43,10 +44,20 @@
         border: white 1px solid;
         background-color: rgba(255,255,255,0.3);
         border-radius: 25px;
+        @media (max-width: 1023px){
+            width: 100%;
+        }
+        @media (min-width: 320px) and (max-width:1022px){
+            width: 100%;
+        
+        }
     }
     
     width: 400px;
     height: 90px;
+    @media(min-width: 350px) and (max-width: 400px){
+        width: 345px;
+    }
     display : flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -78,23 +89,45 @@
     &--wrap{
         width: 700px;
         height: 200px;
-        
+        @media(min-width: 350px) and (max-width: 700px){
+            width: 345px;
+        }
     }
    
     font-size: 1.2rem;
     font-weight: bold;
     color: rgba(255,255,255,0.95);
     width: 700px;
+
     height: 100px;
+    @media(min-width: 350px) and (max-width: 700px){
+        width: 345px;
+    }
     
 }
 .headingP{
     font-size: 1.2rem;
     color: rgba(255,255,255,0.95);
     width: 700px;
-    height: 125px;
+    height: 140px;
     font-weight: bold;
     word-wrap: break-word;
+    @media (min-width: 620px) and (max-width: 800px){
+        font-size: 1rem;
+        width: 600px;
+    }
+    @media (min-width: 450px) and (max-width: 619px){
+        font-size: 0.8rem;
+        width: 430px;
+    }
+    @media (min-width: 360px) and (max-width: 449px){
+        font-size: 0.7rem;
+        width: 350px;
+    }
+    @media (min-width: 520px) and (max-width: 619px){
+        font-size: 0.8rem;
+        width: 500px;
+    }
     @media (min-width: 1440px){
         font-size: 1.2rem;
         height: 150px;
@@ -172,4 +205,7 @@
     p {
         margin-block-end: 0.5em !important;
         margin-block-start: 0.5em !important;
+    }
+    .locky{
+        width: 100%;
     }
