--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -300,7 +300,7 @@ p{
     margin-left: 3rem;
     z-index: 8;
     @media (max-width: 450px){
-        top: -6vh;
+        top: -8vh;
     }
 }
 .buttonProBack{
@@ -341,6 +341,7 @@ p{
     }}
 .modal{
     width: 100%;
+    box-sizing: border-box;
     height: 80%;
         position: absolute !important;
         top: 3rem;
