--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -6,7 +6,7 @@
 
 
 .mainprof{
-    background-color: rgb(5,5,3);
+    background-size: contain;
     width: 100vw;
     height: 100vh;
     text-align: center;
