--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -33,7 +33,7 @@
 .icons{
     &--wrap{
 
-        width: 70%;
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
@@ -89,6 +89,7 @@
     &--wrap{
         width: 700px;
         height: 200px;
+        margin-top: 0.5rem;
         @media(min-width: 350px) and (max-width: 700px){
             width: 345px;
         }
@@ -106,6 +107,7 @@
     
 }
 .headingP{
+    
     font-size: 1.2rem;
     color: rgba(255,255,255,0.95);
     width: 700px;
@@ -135,6 +137,7 @@
 }
 .face{
     &--wrap{
+        margin-top: 0.5rem;
         width: 150px;
         height: 240px;
         display: flex;
@@ -169,8 +172,8 @@
     color: white;
     border:none;
     font-weight: bold;
-    @media (min-width: 320px) and (max-width: 1149px){
-        height: 40px;
+    @media (min-width: 725px) and (max-width: 1149px){
+        
         font-size: 1.5rem;
     }
     
@@ -179,7 +182,8 @@
         font-size: 1.5rem;
     }
     @media (min-width: 320px) and (max-width: 724px){
-        
+        height: 30px;
+        width: 70px;
         font-size: 1rem;
     
     }
@@ -196,7 +200,10 @@
         outline:none;
     }
     &--link{
-        margin-top: 15px;
+        // margin-top: 15px;
+        position: absolute;
+        top: 5vh;
+        right: 80vw;
         width: 150px;
         height: 50px;
         border-radius: 20%;
