--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -164,27 +164,27 @@
 .appvideo{
     position: relative;
     width: 500px;
-    height: 300px;
+    height: 400px;
     z-index: 8;
     border-radius: 25px;
     border: solid white 10px;
     box-sizing: border-box;
-    @media(max-width:750px){
-        width:100%;
-        height:100%;
+    @media(min-width: 450px) and (max-width:750px){
+        width:40%;
+        height:40%;
     }
     @media (min-width: 750px) and (max-width: 1023px){
         width: 300px;
-        height: 250px;
+        height: 340px;
     }
     @media (min-width: 1024px) and (max-width: 1200px){
         width: 400px;
-        height: 320px;
+        
 
     }
     @media (min-width: 1980px) {
         width: 800px;
-        height: 550px;
+        height: 600px;
 
     }
 }
@@ -219,7 +219,7 @@
     }
     @media (min-width: 750px) and (max-width: 1023px){
         width: 300px;
-        height: 250px;
+        height: 340px;
     }
     @media (min-width: 1024px) and (max-width: 1200px){
         width: 400px;
