--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -96,41 +96,39 @@ body{
     }
     &--link{
         z-index: 8;
-        width: 10vw;
-        height: 5vh;
-        border-radius: 20%;
+        // width: 10vw;
+        // height: 5vh;
+        // border-radius: 20%;
     }
     &--wrap{
-        &--flex{
-            position: absolute;
-            top: 70vh;
-            width: 100vw;
-            height: 50px;
-            display: flex;
-            justify-content: center;
-            // align-items: baseline;
-            z-index: 8;
-            @media (max-width: 724px){
-                width: 100%;
+        // &--flex{
+        //     position: absolute;
+        //     top: 70vh;
+        //     width: 100vw;
+        //     height: 50px;
+        //     display: flex;
+        //     justify-content: center;
+        //     // align-items: baseline;
+        //     z-index: 8;
+        //     @media (max-width: 724px){
+        //         width: 100%;
                 
-            }
-            @media (min-width: 320px) and (max-width: 600px){
-                width: 70%;
-                height: 60px;
-                height: 60px;
-            }
+        //     }
+        //     @media (min-width: 320px) and (max-width: 600px){
+        //         width: 70%;
+        //         height: 60px;
+        //         height: 60px;
+        //     }
 
-        }
+        // }
         display: flex;
-        width: 60vw;
-        height: 50px;
+        position: absolute;
+        top: 70vh;
+        width: 100vw;
+        height: 60px;
         justify-content: space-around;
         align-items: baseline;
         z-index: 8;
-        @media (max-width: 724px){
-            width: 100%;
-            
-        }
         @media (min-width: 320px) and (max-width: 600px){
             width: 100%;
             height: 60px;
