--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -33,7 +33,7 @@
 .icons{
     &--wrap{
 
-        width: 100%;
+        width: 99vw;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
@@ -41,7 +41,7 @@
         position: absolute !important;
         top: 3rem;
         z-index: 3;
-        border: white 1px solid;
+        border: red 1px solid;
         background-color: rgba(255,255,255,0.3);
         border-radius: 25px;
     }
@@ -71,6 +71,7 @@
             width: 50px;
             height: 50px;
             padding: 5px;
+            border-radius: 2px;
         }
         // background-color: rgba(255,255,255,0.5);
         border-radius: 25px;
