--- a/src/components/Profile/Profile.scss
+++ b/src/components/Profile/Profile.scss
@@ -41,7 +41,7 @@
         position: absolute !important;
         top: 3rem;
         z-index: 3;
-        border: red 1px solid;
+        border: white 1px solid;
         background-color: rgba(255,255,255,0.3);
         border-radius: 25px;
     }
@@ -194,6 +194,9 @@
     }
     &:hover{
         border: 1px solid white;
+        @media(min-width: 300px) and (max-width: 500px){
+           border: none;
+        }
     }
     &:focus{
         outline:none;
@@ -205,6 +208,7 @@
         right: 80vw;
         @media(max-width: 500px){
             right: 70vw;
+            top: 0.5rem;
         }
         width: 150px;
         height: 50px;
