--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -89,10 +89,10 @@ body{
     }
     &:hover{
         border: 1px solid white;
-        @media(min-width: 300px) and (max-width: 500px){
-            border: none;
-         }
-         
+        // @media(min-width: 300px) and (max-width: 500px){
+        //     border: none;
+        //  }
+
     }
     &:focus{
         outline:none;
