--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -77,7 +77,7 @@ body{
         font-size: 1.5rem;
     }
     @media (min-width: 320px) and (max-width: 724px){
-        
+        width: 80px;
         font-size: 1rem;
     
     }
@@ -127,15 +127,15 @@ body{
         display: flex;
         position: absolute;
         top: 70vh;
-        width: 99vw;
+        width: 99%;
         height: 60px;
         justify-content: space-around;
         align-items: baseline;
         z-index: 8;
         @media (min-width: 320px) and (max-width: 600px){
-            width: 100%;
+            width: 99%;
             height: 60px;
-            justify-content: space-between;
+            justify-content: space-around;
         }
     }
 }
