--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -77,7 +77,7 @@ body{
         font-size: 1.5rem;
     }
     @media (min-width: 320px) and (max-width: 724px){
-        width: 80px;
+        width: 49vw;
         font-size: 1rem;
     
     }
@@ -104,26 +104,6 @@ body{
         // border-radius: 20%;
     }
     &--wrap{
-        // &--flex{
-        //     position: absolute;
-        //     top: 70vh;
-        //     width: 100vw;
-        //     height: 50px;
-        //     display: flex;
-        //     justify-content: center;
-        //     // align-items: baseline;
-        //     z-index: 8;
-        //     @media (max-width: 724px){
-        //         width: 100%;
-                
-        //     }
-        //     @media (min-width: 320px) and (max-width: 600px){
-        //         width: 70%;
-        //         height: 60px;
-        //         height: 60px;
-        //     }
-
-        // }
         display: flex;
         position: absolute;
         top: 70vh;
@@ -133,7 +113,7 @@ body{
         align-items: baseline;
         z-index: 8;
         @media (min-width: 320px) and (max-width: 600px){
-            width: 99%;
+            width: 99vw;
             height: 60px;
             justify-content: space-around;
         }
