--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -214,7 +214,9 @@
     @media (max-width: 450px){
        top:1vh;
        height: 50%;
-       width: 85%;
+       width: 99%;
+       align-items: center;
+       margin-left: 0;
     }
     top: 15vh;
     width: 500px;
@@ -240,7 +242,7 @@
 
     }
     &--description{
-        position:absolute;
+        position:relative;
         top: 15vh;
         left: 50vw;
         width: 500px;
@@ -248,7 +250,9 @@
         @media (max-width: 450px){
             top: 50vh;
             left: 0;
-            margin-left: 3rem;
+            // margin-left: 3rem;
+            margin: 0 auto;
+            text-align: center;
             width:300px;
             height:300px;
         }
@@ -364,6 +368,7 @@ p{
         @media (max-width: 500px){
             display:flex;
             flex-direction: column;
+            align-items: center;
             height: 95%;
         }
        
