--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -261,7 +261,7 @@
             margin: 0 auto;
             text-align: center;
             width:300px;
-            height:280px;
+            height:45%;
         }
         @media(min-width: 451px) and (max-width:750px){
             width:40%;
@@ -319,7 +319,8 @@ p{
     margin-left: 3rem;
     z-index: 8;
     @media (max-width: 450px){
-        top: -8vh;
+        top: -7vh;
+        right: 70vw;
     }
 }
 .buttonProBack{
@@ -376,7 +377,7 @@ p{
             display:flex;
             flex-direction: column;
             align-items: center;
-            height: 95%;
+            height: 85%;
         }
        
 }
