--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@ a{
   padding: 5rem;
   box-sizing: border-box;
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   background-color: white;
   z-index: 100;
   position: absolute;
@@ -17,8 +17,20 @@ a{
     justify-content: space-between;
     font-size: 1.5rem;
     text-align: center;
+    @media (min-width: 701px) and (max-width: 1023px){
+      font-size: 1rem;
+    }
+    @media (min-width: 501px) and (max-width: 700px){
+      font-size: 0.8rem;
+    }
+    @media (min-width: 301px) and (max-width: 500px){
+      flex-direction: column;
+    }
     & img{
       width: 10vw;
+      @media (min-width: 301px) and (max-width: 500px){
+        width: 40vw;
+      }
     }
     & span{
       font-weight: bold;
@@ -28,6 +40,13 @@ a{
     & .label{
       margin-top: 1rem;
       width: 20vw;
+      @media (min-width: 500px) and (max-width: 1023px){
+        width: 15vw;
+      }
+      @media (min-width: 301px) and (max-width: 500px){
+        width: 100%;
+        margin-bottom: 2rem;
+      }
     }
   }
   &__intro{
@@ -37,18 +56,45 @@ a{
     box-sizing: border-box;
     display: flex;
     justify-content: center;
+    @media (min-width: 301px) and (max-width: 500px){
+      flex-direction: column;
+      text-align: center;
+      padding: 0;
+      justify-content: none;
+      align-items: center;
+    }
     &__logo{
       width: 5rem;
       height: 5rem;
+      @media (min-width: 801px) and (max-width: 1023px){
+        width: 3rem;
+        height: 3rem;
+      }
+      @media (min-width: 501px) and (max-width: 800px){
+        width: 2rem;
+        height: 2rem;
+      }
+      
       border: solid 1px black;
       margin-right: 2rem;
       padding: 1rem;
       border-radius: 50%;
+      @media (min-width: 301px) and (max-width: 500px){
+        margin-right: 0;
+        margin-top: 3rem;
+      }
     }
     &__greeting{
       width: 40%;
       display: flex;
-      flex-direction: column;
+      
+      @media (min-width: 301px) and (max-width: 500px){
+        width: 80vw;
+        margin-top: 2rem;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
       & img{
         width: 1.5rem;
         height: 1.5rem;
@@ -58,6 +104,15 @@ a{
         color: rgb(241, 142, 50);
       font-size: 1.6rem;
       font-weight: 900;
+      @media (min-width: 301px) and (max-width: 500px){
+        
+      }
+      @media (min-width: 801px) and (max-width: 1023px){
+        font-size: 1.2rem;
+      }
+      @media (min-width: 501px) and (max-width: 800px){
+        font-size: 1rem;
+      }
       }
       &__links{
         display: flex;
@@ -67,6 +122,7 @@ a{
           margin-right: 1rem;
           width: 1.5rem;
           height: 1.5rem;
+          
          
         }
       }
@@ -75,6 +131,20 @@ a{
       margin-left: 2rem;
       width: 40%;
       font-size: 1rem;
+      @media (min-width: 801px) and (max-width: 1023px){
+        font-size: 0.8rem;
+      }
+      @media (min-width: 601px) and (max-width: 800px){
+        font-size: 0.6rem;
+      }
+      @media (min-width: 301px) and (max-width: 500px){
+        width: 80vw;
+        margin-top: 2rem;
+        margin-left: 0;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
     }
   }
 }
@@ -84,25 +154,54 @@ a{
   &__title{
     padding-top: 1rem;
     font-size: 2.5rem;
-    padding-left: 2rem;
+    padding-left: 3rem;
     font-weight: bold;
   }
   &__beagiver{
     margin-top: 4rem;
     display: flex;
+    justify-content: space-evenly;
     & img {
       
-      width: 50%;
-      height: 50%;
+      width:40%;
+      height: 40%;
     }
     &__description{
-      margin-top: 2rem;
+      width: 40%;
+      margin-top: 3rem;
       font-size: 1.5rem;
+      @media (min-width: 801px) and (max-width: 1023px){
+        margin-top: 2rem;
+        font-size: 1.2rem
+      }
+      @media (min-width: 501px) and (max-width: 800px){
+        margin-top: 1rem;
+        font-size: 1rem;
+      }
       & span{
         color: rgb(241, 142, 50);
       }
+      & button{
+        margin-top: 1rem;
+        width: 8rem;
+        height: 2rem;
+        background-color: rgb(241, 142, 50);
+        color: white;
+        border: none;
+        border-radius: 1rem;
+        font-size: 1.1rem;
+        font-weight: bold;
+      }
     }
   }
-  position: absolute;
-  top: 200vh;
+ 
+}
+.popup-content{
+  width: 80vw !important;
+}
+iframe{
+  padding: 0;
+  background-color: white;
+  width: 80vw;
+  height: 80vh;
 }
