--- a/src/App.scss
+++ b/src/App.scss
@@ -4,27 +4,40 @@ a{
   text-decoration: none;
 }
 .projects{
-  padding: 5rem;
+  
   box-sizing: border-box;
   width: 100%;
   height: 90vh;
   background-color: white;
   z-index: 100;
   position: absolute;
+  @media (min-width: 301px) and (max-width: 500px){
+    padding: 0;
+  }
+  @media (min-width: 501px) {
+    padding: 5rem;
+  }
   &__icons{
     width: 100%;
     display: flex;
     justify-content: space-between;
     font-size: 1.5rem;
     text-align: center;
+    @media (min-width: 1024px){
+      padding: 0;
+    }
     @media (min-width: 701px) and (max-width: 1023px){
       font-size: 1rem;
+     padding: 0;
     }
     @media (min-width: 501px) and (max-width: 700px){
       font-size: 0.8rem;
+      padding: 0;
     }
     @media (min-width: 301px) and (max-width: 500px){
       flex-direction: column;
+      padding: 2rem;
+      box-sizing: border-box;
     }
     & img{
       width: 10vw;
@@ -151,20 +164,41 @@ a{
 .demo{
   height: 100vh;
   width: 100vw;
+  @media (min-width: 301px) and (max-width: 500px){
+    width: 100%;
+    margin-top: 2rem;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
   &__title{
     padding-top: 1rem;
     font-size: 2.5rem;
     padding-left: 3rem;
     font-weight: bold;
+    @media (min-width: 301px) and (max-width: 500px){
+      padding-left: 0;
+    }
   }
   &__beagiver{
     margin-top: 4rem;
     display: flex;
     justify-content: space-evenly;
+    @media (min-width: 301px) and (max-width: 500px){
+      width: 100vw;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
     & img {
       
       width:40%;
       height: 40%;
+      @media (min-width: 301px) and (max-width: 500px){
+        width: 80%;
+        height: 80%;
+      }
     }
     &__description{
       width: 40%;
@@ -177,6 +211,11 @@ a{
       @media (min-width: 501px) and (max-width: 800px){
         margin-top: 1rem;
         font-size: 1rem;
+      }
+      @media (min-width: 300px) and (max-width: 500px){
+        width: 100%;
+        padding: 2rem;
+        box-sizing: border-box;
       }
       & span{
         color: rgb(241, 142, 50);
