--- a/src/App.scss
+++ b/src/App.scss
@@ -32,6 +32,14 @@ a{
   margin-right: auto;
   margin-left: 1rem;
   border-bottom: none !important;
+  @media (max-width: 500px){
+    text-align: unset;
+    line-height: normal;
+    margin-left: 0;
+    padding: 0.6rem;
+    font-size: 0.8rem;
+    width: 7rem;
+  }
 }
 .projects{
   
