--- a/src/App.scss
+++ b/src/App.scss
@@ -82,14 +82,14 @@ a{
     //   position: relative;
     // }
     & img{
-      width: 10vw;
+      width: 8vw;
       @media (min-width: 301px) and (max-width: 500px){
         width: 40vw;
       }
     }
     & span{
       font-weight: bold;
-      color: rgb(241, 142, 50);
+      // color: rgb(241, 142, 50);
 
     }
     & .label{
@@ -182,12 +182,12 @@ a{
     &__details{
       margin-left: 2rem;
       width: 40%;
-      font-size: 1rem;
+      font-size: 1.3rem;
       @media (min-width: 801px) and (max-width: 1023px){
-        font-size: 0.8rem;
+        font-size: 1rem;
       }
       @media (min-width: 601px) and (max-width: 800px){
-        font-size: 0.6rem;
+        font-size: 0.8rem;
       }
       @media (min-width: 301px) and (max-width: 500px){
         width: 80vw;
@@ -199,6 +199,9 @@ a{
       }
     }
   }
+}
+#bio {
+  height: 100vh;
 }
 .demo{
   height: 100vh;
