--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -282,7 +282,7 @@ body{
 
   .background {
     fill: transparent;
-    stroke: #ffffff;
+    stroke: rgba(255,255,255,0.5);;
     transition: all 200ms ease;
   }
   
@@ -290,7 +290,7 @@ body{
     fill: transparent;
     stroke-dasharray: 377;
     stroke-dashoffset: 377;
-    stroke: #ff5e00;
+    stroke: white;
     transform-origin: 50% 50%;
     transform: rotate(-270deg);
     transition: all 800ms ease;
@@ -298,7 +298,7 @@ body{
   
   .line {
     stroke-width: 2;
-    stroke: #ffffff;
+    stroke: rgba(255,255,255,0.5);;
     transform-origin: 50% 50%;
     transition: all 500ms ease;
   }
@@ -320,7 +320,7 @@ body{
     }
     
     .line {
-      stroke: #ff5e00;
+      stroke: white;
     }
     
 //     .line {
