--- a/src/App.scss
+++ b/src/App.scss
@@ -2,6 +2,15 @@
 a{
   color: rgb(255, 123, 0);
   text-decoration: none;
+  &:hover{
+    color: rgb(224, 108, 0);
+  }
+}
+.image-gallery{
+  width: 650px !important;
+  &-image img{
+    // border-radius: 2rem !important;
+  }
 }
 .navbar{
   position: fixed;
@@ -13,7 +22,7 @@ a{
   margin: 0;
   text-align: center;
   & > .active{
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid rgb(231, 147, 79);
   }
 }
 .li {
@@ -41,8 +50,14 @@ a{
     width: 7rem;
   }
 }
-.projects{
-  
+.bio{
+  color: rgb(70, 70, 70);
+  &__title{
+    display: block;
+    margin: 5rem auto 3rem;
+    text-align: center;
+    font-size: 2rem;
+  }
   box-sizing: border-box;
   width: 100%;
   
@@ -53,11 +68,13 @@ a{
     padding: 0;
   }
   @media (min-width: 501px) {
-    padding: 5rem;
+    padding: 5rem 0;
   }
   &__icons{
-    width: 100%;
+    width: 60%;
+    margin: 3rem auto;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     font-size: 1.5rem;
     text-align: center;
@@ -67,24 +84,35 @@ a{
     }
     @media (min-width: 701px) and (max-width: 1023px){
       font-size: 1rem;
+      width: 80%;
      padding: 0;
     }
-    @media (min-width: 501px) and (max-width: 700px){
-      font-size: 0.8rem;
-      padding: 0;
-    }
-    @media (min-width: 301px) and (max-width: 500px){
+    @media (min-width: 301px) and (max-width: 700px){
+      width: 80%;
       flex-direction: column;
       padding: 2rem;
       box-sizing: border-box;
+    }
+    &__item{
+      width: 50%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 2rem auto;
+      @media (max-width: 700px){
+        width: 90%;
+      }
+      
     }
     // & > div {
     //   position: relative;
     // }
     & img{
       width: 8vw;
-      @media (min-width: 301px) and (max-width: 500px){
+      @media (min-width: 301px) and (max-width: 700px){
         width: 40vw;
+        margin: 0 auto;
+        display: block;
       }
     }
     & span{
@@ -95,10 +123,10 @@ a{
     & .label{
       margin-top: 1rem;
       width: 20vw;
-      @media (min-width: 500px) and (max-width: 1023px){
-        width: 15vw;
+      @media (min-width: 701px) and (max-width: 1023px){
+        width: 80%;
       }
-      @media (min-width: 301px) and (max-width: 500px){
+      @media (min-width: 301px) and (max-width: 700px){
         width: 100%;
         margin-bottom: 2rem;
       }
@@ -118,26 +146,9 @@ a{
       justify-content: none;
       align-items: center;
     }
+    
     &__logo{
-      width: 5rem;
-      height: 5rem;
-      @media (min-width: 801px) and (max-width: 1023px){
-        width: 3rem;
-        height: 3rem;
-      }
-      @media (min-width: 501px) and (max-width: 800px){
-        width: 2rem;
-        height: 2rem;
-      }
       
-      border: solid 1px black;
-      margin-right: 2rem;
-      padding: 1rem;
-      border-radius: 50%;
-      @media (min-width: 301px) and (max-width: 500px){
-        margin-right: 0;
-        margin-top: 3rem;
-      }
     }
     &__greeting{
       width: 40%;
@@ -199,91 +210,4 @@ a{
       }
     }
   }
-}
-.demo{
-  height: 100vh;
-  @media (min-width: 301px) and (max-width: 500px){
-    width: 100%;
-    margin-top: 2rem;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-  }
-  &__title{
-    padding-top: 1rem;
-    font-size: 2.5rem;
-    padding-left: 1rem;
-    font-weight: bold;
-    @media (min-width: 301px) and (max-width: 500px){
-      padding-left: 0;
-    }
-  }
-  &__beagiver{
-    margin-top: 4rem;
-    display: flex;
-    justify-content: space-evenly;
-    @media (min-width: 301px) and (max-width: 500px){
-      width: 100vw;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-    }
-    & img {
-      
-      width:40%;
-      height: 40%;
-      @media (min-width: 301px) and (max-width: 500px){
-        width: 80%;
-        height: 80%;
-      }
-    }
-    &__description{
-      width: 40%;
-      margin-top: 3rem;
-      font-size: 1.5rem;
-      @media (min-width: 801px) and (max-width: 1023px){
-        margin-top: 2rem;
-        font-size: 1.2rem
-      }
-      @media (min-width: 501px) and (max-width: 800px){
-        margin-top: 1rem;
-        font-size: 1rem;
-      }
-      @media (min-width: 300px) and (max-width: 500px){
-        width: 100%;
-        padding: 2rem;
-        box-sizing: border-box;
-      }
-      &--tech{
-        & span {
-          font-weight: bold;
-        }
-      }
-      & span{
-        // color: rgb(241, 142, 50);
-      }
-      & button{
-        margin-top: 1rem;
-        width: 8rem;
-        height: 2rem;
-        background-color: rgb(241, 142, 50);
-        color: white;
-        border: none;
-        border-radius: 1rem;
-        font-size: 1.1rem;
-        font-weight: bold;
-      }
-    }
-  }
- 
-}
-.popup-content{
-  width: 80vw !important;
-}
-iframe{
-  padding: 0;
-  background-color: white;
-  width: 80vw;
-  height: 80vh;
 }
