--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -1,383 +1,190 @@
-.main{
-    background-color: rgb(5,5,3);
-    width: 100vw;
-    height: 100vh;
-    overflow: hidden;
-}
-.overlayPr{
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
+@import "../../../node_modules/react-alice-carousel/lib/scss/alice-carousel.scss";
+.face{
+    display: block;
     
-    z-index:2;
-}
-
-.backgroundlight{
-    width: 100vw;
-    height: 100vh;
-}
-// bird animation is generously provided by Steven Roberts https://codepen.io/matchboxhero/pen/RLebOY?editors=1100 
-.bird {
-	background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/174479/bird-cells.svg);
-	background-size: auto 100%;
-	width: 44px;
-	height: 68px;
-	will-change: background-position;
-    position: absolute;
-    top: 20vh;
-    @media (max-width: 500px){
-        top: 70vh;
-    }
-	animation-name: fly;
-	
-	animation-timing-function: steps(10);
-    animation-iteration-count: infinite;
-    &--one {
-		animation-duration: 1s;
-		animation-delay: -0.5s;		
-	}
-	
-	&--two {
-		animation-duration: 0.9s;
-		animation-delay: -0.75s;
-    }
-    &--three {
-		animation-duration: 1.25s;
-		animation-delay: -0.25s;
-	}
-	
-	&--four {
-		animation-duration: 1.1s;
-		animation-delay: -0.5s;
-	}
-    &--wrap{
-            position: absolute;
-            top: 20%;
-            left: -10%;
-            transform: scale(0) translateX(-10vw);
-            will-change: transform;
-            
-            animation-name: fly-right-one;
-            animation-timing-function: linear;
-            animation-iteration-count: infinite;
-            
-            &--one {
-                animation-duration: 15s;
-                animation-delay: 0;
-            }
-            
-            &--two {
-                animation-duration: 16s;
-                animation-delay: 1s;
-            }
-            
-            &--three {
-                animation-duration: 14.6s;
-                animation-delay: 9.5s;
-            }
-            
-            &--four {
-                animation-duration: 16s;
-                animation-delay: 10.25s;
-            }
-        
-        
-    }
-}
-
-
-
-@keyframes fly {
-	
-	100% {
-		background-position: -500px 0;
-	}
-	
-}
-@keyframes fly-right-one {
-	
-	0% {
-		transform: scale(0.3) translateX(-10vw);
-	}
-	
-	10% {
-		transform: translateY(2vh) translateX(10vw) scale(0.4);
-	}
-	
-	20% {
-		transform: translateY(0vh) translateX(30vw) scale(0.5);
-	}
-	
-	30% {
-		transform: translateY(4vh) translateX(50vw) scale(0.6);
-	}
-	
-	40% {
-		transform: translateY(2vh) translateX(70vw) scale(0.6);
-	}
-	
-	50% {
-		transform: translateY(0vh) translateX(90vw) scale(0.6);
-	}
-	
-	60% {
-		transform: translateY(0vh) translateX(110vw) scale(0.6);
-	}
-	
-	100% {
-		transform: translateY(0vh) translateX(110vw) scale(0.6);
-	}
-	
-}
-@keyframes fly-right-two {
-	
-	0% {
-		transform: translateY(-2vh) translateX(-10vw) scale(0.5);
-	}
-	
-	10% {
-		transform: translateY(0vh) translateX(10vw) scale(0.4);
-	}
-	
-	20% {
-		transform: translateY(-4vh) translateX(30vw) scale(0.6);
-	}
-	
-	30% {
-		transform: translateY(1vh) translateX(50vw) scale(0.45);
-	}
-	
-	40% {
-		transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
-	}
-	
-	50% {
-		transform: translateY(0vh) translateX(90vw) scale(0.45);
-	}
-	
-	51% {
-		transform: translateY(0vh) translateX(110vw) scale(0.45);
-	}
-	
-	100% {
-		transform: translateY(0vh) translateX(110vw) scale(0.45);
-	}
-	
-}
-.appvideo{
-    position: relative;
-    width: 500px;
-    height: 400px;
-    z-index: 8;
-    border-radius: 25px;
-    border: solid white 10px;
-    box-sizing: border-box;
-    @media (max-width: 549px){
-        width:300px;
-        height:300px;
-    }
-    @media(min-width: 550px) and (max-width:750px){
-        width:300px;
-        height:300px;
-    }
-    @media(min-width: 550px) and (max-width:750px){
-        width:40%;
-        height:40%;
-    }
-    @media (min-width: 750px) and (max-width: 1023px){
-        width: 300px;
-        height: 340px;
-    }
-    @media (min-width: 1024px) and (max-width: 1200px){
-        width: 400px;
-        
-
-    }
-    @media (min-width: 1980px) {
-        width: 800px;
-        height: 600px;
-
-    }
-}
-.appvideo iframe{
-    position: absolute;
-    z-index:7;
-    padding: 0;
-    background-color: white;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-
-.beagiver{
-    position:absolute;
-    display: flex;
-    flex-direction: column;
-    @media (max-width: 450px){
-       top:1vh;
-       height: 50%;
-       width: 99%;
-       align-items: center;
-       margin-left: 0;
-    }
-    top: 15vh;
-    width: 500px;
-    height: 400px;
-    margin-left: 3rem;
-    z-index: 8;
-    @media (max-width: 549px){
-        width:300px;
-        height:320px; 
-    }
-    @media(min-width: 550px) and (max-width:750px){
-        width:40%;
-        height:40%;
-    }
-    @media (min-width: 750px) and (max-width: 1023px){
-        width: 300px;
-        height: 340px;
-    }
-    @media (min-width: 1024px) and (max-width: 1200px){
-        width: 400px;
-        
-
-    }
-    @media (min-width: 1980px) {
-        width: 800px;
-        height: 600px;
-
-    }
-    &--description{
-        position:relative;
-        top: 15vh;
-        left: 50vw;
-        width: 500px;
-        height: 400px;
-        @media (max-width: 450px){
-            top: 320px;
-            left: 0;
-            // margin-left: 3rem;
-            margin: 0 auto;
-            text-align: center;
-            width:300px;
-            height:46%;
-        }
-        @media(min-width: 451px) and (max-width:750px){
-            width:40%;
-            height:40%;
-        }
-        @media (min-width: 750px) and (max-width: 1023px){
-            width: 300px;
-            height: 340px;
-        }
-        @media (min-width: 1024px) and (max-width: 1200px){
-            width: 480px;
-            height: 400px;
+    margin: 0 auto;
+        width: 5rem;
+      height: 5rem;
+      @media (min-width: 801px) and (max-width: 1023px){
+        width: 3rem;
+        height: 3rem;
+      }
+      @media (min-width: 501px) and (max-width: 800px){
+        width: 2rem;
+        height: 2rem;
+      }
+      
+      margin: 0 auto;
     
-        }
-        @media (min-width: 1980px) {
-            width: 800px;
-            height: 650px;
-            
-    
-        }
-        z-index: 8;
-        background-color: rgba(182, 153, 99, 0.5);
-        border-radius: 25px;
-        border: solid white 10px;
-        box-sizing: border-box;
-        padding: 1rem;
-        &__text{
-            font-size: 1.3rem;
-            width: 100%;
-            color: rgb(110, 72, 0);
-            overflow-wrap: break-word;
-            @media (max-width: 600px){
-                font-size:12px;
-            }
-            @media(min-width: 601px) and (max-width:750px){
-                font-size: 14px;
-            }
-            @media (min-width: 750px) and (max-width: 1023px){
-                font-size: 0.8rem;
-            }
-            @media (min-width: 1980px) {
-                font-size: 2.2rem;
-        
-            }
-        }
-    }
-}
-p{
-    width: 100%;
-    overflow-wrap: break-word;
-}
-.backPro{
-    position:absolute;
-    top: 5vh;
-    margin-left: 3rem;
-    z-index: 8;
-    @media (max-width: 450px){
-        top: -7vh;
-        right: 70vw;
-    }
-}
-.buttonProBack{
-    width: 150px;
-    height: 50px;
-    border-radius: 20%;
-    background: none;
-    color: white;
-    border:none;
-    font-weight: bold;
-    
-    &:hover{
-        border: 1px solid white;
-    }
-    &:focus{
-        outline:none;
-    }
-    @media (min-width: 725px) and (max-width: 1359px){
-        
-        font-size: 2rem;
-    }
-    @media (min-width: 320px) and (max-width: 724px){
-        
-        font-size: 1rem;
-    
-    }
-    @media (min-width: 1360px) and (max-width: 1919px) {
-        font-size: 2rem; 
-    }
-    @media (min-width: 1920px){
-        font-size: 3rem;
-    }
-    &--link{
-        margin-top: 15px;
-        width: 100px;
-        height: 50px;
-        border-radius: 20%;
-    }}
-.modal{
-    width: 99vw;
-    box-sizing: border-box;
-    height: 80%;
-        position: absolute !important;
-        top: 3rem;
-        z-index: 7;
-        border: white 1px solid;
-        background-color: rgba(255,255,255,0.3);
-        border-radius: 25px;
-        @media (min-width: 1024px) and (max-width: 1200px){
-            height:90%
-    
-        }
-        @media (max-width: 500px){
-            display:flex;
-            flex-direction: column;
-            align-items: center;
-            height: 93%;
-        }
+      @media (min-width: 301px) and (max-width: 500px){
        
+      }
+}
+.Projectsmain{
+    // height: 100vh;
+    padding: 3rem 3rem 8rem;
+    @media(max-width:600px){
+        padding: 3rem 0rem 0rem;
+    }
+    box-sizing: border-box;
+    color: rgb(70, 70, 70);
+}
+.link1{
+    width: 50%;
+    @media(max-width:600px){
+        width: 100%;
+    }
+}
+.link2{
+    width: 30%;
+    @media(max-width:600px){
+        width: 100%;
+    }
+}
+.link3{
+    width: 20%;
+    @media(max-width:600px){
+        width: 100%;
+    }
+}
+.link4{
+    width: 60%;
+    @media(max-width:600px){
+        width: 100%;
+    }
+}
+.link5{
+    width: 40%;
+    @media(max-width:600px){
+        width: 100%;
+    }
+}
+.box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // width: 300px;
+    height: 150px;
+    border-radius: 25px;
+    // margin: 2rem;
+    @media(max-width:600px){
+        height: 150px;
+        border-radius: 0;
+    }
+    & img{
+        width: 40%
+    }
+    &--wrap{
+        width: 70%;
+        height: 150px;
+        display: flex;
+        // flex-wrap: wrap;
+        justify-content: center;
+        // box-sizing: border-box;
+        margin: 0 auto;
+        @media(max-width:1000px){
+            width: 90%;
+        }
+        @media(max-width:600px){
+            flex-direction: column;
+            width: 100%;
+            height: unset;
+        }
+    }
+}
+.box4{
+    background-color: rgb(255, 215, 224);
+    
+    width: 100%;
+    & img{
+        width: 20%;
+    }
+}
+.box2{
+    background-color: rgb(186, 243, 221);
+    width: 100%;
+    & img{
+        width: 70%;
+        @media(max-width:600px){
+            width: 50%;
+        }
+    }
+}
+.box5{
+    background-color: rgb(255, 248, 187);
+    
+    & img{
+        border-radius: 1rem;
+        width: 20%;
+        @media(max-width:600px){
+            width: 40%;
+        }
+    }
+}
+.box3{
+    background-color: rgb(200, 255, 246);
+    width: 100%;
+    & img{
+        width: 30%;
+    }
+    
+}
+.box1{
+    background-color: rgb(252, 220, 193);
+    width: 100%;
+    & img{
+        @media(max-width:600px){
+            width: 15%;
+        }
+    }
+}
+.box4:hover{
+    background-color: rgb(255, 185, 200);
+}
+.box5:hover{
+    background-color: rgb(255, 239, 96);
+}
+.box3:hover{
+    background-color: rgb(128, 255, 227);
+}
+.box1:hover{
+    background-color: rgb(255, 193, 142);
+}
+.box2:hover{
+    background-color: rgb(128, 252, 194);
+}
+.title{
+    font-size: 2rem;
+    width: 100%;
+    text-align: center;
+    margin-top: 2rem;
+}
+.subtitle{
+    font-size: 1.5rem;
+    width: 100%;
+    text-align: center;
+    & span{
+        font-weight: bold;
+    }
+}
+.subsubtitle{
+    margin-top: 1rem;
+    font-size: 1rem;
+    width: 100%;
+    text-align: center;
+    & span{
+        font-weight: bold;
+    }
+}
+.myproj{
+    width: 100%;
+    text-align: center;
+    margin: 5rem 0 2rem;
+    font-size: 1.2rem;
+    font-weight: 600;
+    // color: rgb(212, 142, 85)
+}
+.contacts{
+    text-align: center;
+    width: 100%;
 }
