--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -51,8 +51,12 @@ body{
         width: 450px;
         font-size: 5rem;
     }
-    @media (min-width: 320px) and (max-width: 1000px){
+    @media (min-width: 720px) and (max-width: 1000px){
         font-size: 2.5rem;
+        width: 80%
+    }
+    @media (min-width: 200px) and (max-width: 719px){
+        font-size: 2rem;
         width: 80%
     }
     width: 450px;
