--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -158,11 +158,16 @@
     width: 100%;
     text-align: center;
     margin-top: 2rem;
+    padding: 0 2rem;
+    box-sizing: border-box;
 }
 .subtitle{
+    margin: 1rem 0 2rem;
     font-size: 1.5rem;
     width: 100%;
     text-align: center;
+    padding: 0 2rem;
+    box-sizing: border-box;
     & span{
         font-weight: bold;
     }
@@ -172,6 +177,8 @@
     font-size: 1rem;
     width: 100%;
     text-align: center;
+    padding: 0 2rem;
+    box-sizing: border-box;
     & span{
         font-weight: bold;
     }
@@ -182,6 +189,8 @@
     margin: 5rem 0 2rem;
     font-size: 1.2rem;
     font-weight: 600;
+    padding: 0 2rem;
+    box-sizing: border-box;
     // color: rgb(212, 142, 85)
 }
 .contacts{
